efecto parallax y cambio color divs

--- a/leguin.html
+++ b/leguin.html
@@ -7,7 +7,9 @@
   <title>Leguina Informatica</title>
   <link href="img/logo_blanco.jpg" rel="icon">
   <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Red+Rose&display=swap" rel="stylesheet">
   <link
+  
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900"
     rel="stylesheet">
 
@@ -211,20 +213,21 @@
         </div>
       </div>
     </div>
+    <br>
     <!---COMINEZA PREGUNTAS FRECUENTES-->
-    <div class="container-fluid padrePregMas mb-5 pb-5">
+    <div class="container-fluid padrePregMas">
       <div class="row padrePreg">
         <div class="col-md-12 col-sm-12 col-xs-12">
-          <div class="section-headline text-center ">
-            <h2 class="text-white">Preguntas frecuentes</h2>
+          <div class=" text-center">
+            <h2 class="text-dark ">Preguntas frecuentes</h2>
           </div>
         </div>
         <div class="col-xs-10 col-sm-10 col-lg-10 col-xl-12 cartaUno row">
 
-          <div class="card border-white cartaPreg col-xs-10 col-md-10 col-lg-6 col-xl-4" style="width: 18rem;">
+          <div class="card cartaPreg col-xs-10 col-md-10 col-lg-6 col-xl-4" style="width: 18rem;">
             <div class="card-body">
-              <h4 class="card-title text-white">¿Puedo ver mis cámaras desde cualquier lugar?</h4>
-              <p class="card-text text-white"> Efectivamente, sólo es necesario contar con una conexión a internet
+              <h4 class="card-title text-dark">¿Puedo ver mis cámaras desde cualquier lugar?</h4>
+              <p class="card-text text-dark"> Efectivamente, sólo es necesario contar con una conexión a internet
                 estable, tanto en el CCTV como
                 en tu celular o computadora. Con estos requerimientos y la configuración correspondiente, es
                 posible acceder a las imagenes de las cámaras desde cualquier lugar del mundo.</p>
@@ -232,10 +235,10 @@
             </div>
           </div>
 
-          <div class="card cartaPreg border-white col-xs-10 col-md-10 col-lg-6 col-xl-4" style="width: 18rem;">
+          <div class="card cartaPreg col-xs-10 col-md-10 col-lg-6 col-xl-4" style="width: 18rem;">
             <div class="card-body">
-              <h4 class="card-title text-white">¿Por qué mi conexión Wi-Fi se cae todo el tiempo?</h4>
-              <p class="card-text text-white">Existe una solución para ese problema y es a través de equipos
+              <h4 class="card-title text-dark">¿Por qué mi conexión Wi-Fi se cae todo el tiempo?</h4>
+              <p class="card-text text-dark">Existe una solución para ese problema y es a través de equipos
                 profesionales preparados para tal
                 fin, con una correcta instalación (en referencia a la ubicación) y configuración (software), se
                 puede lograr estabilidad y seguridad en tu red Wi-Fi.</p>
@@ -243,10 +246,10 @@
             </div>
           </div>
 
-          <div class="card border-white cartaPreg col-xs-10 col-md-10 col-lg-6 col-xl-4" style="width: 18rem;">
+          <div class="card cartaPreg col-xs-10 col-md-10 col-lg-6 col-xl-4" style="width: 18rem;">
             <div class="card-body">
-              <h4 class="card-title text-white">Mi computadora hace mucho ruido, ¿qué podría ser?</h4>
-              <p class="card-text text-white">Hay una causa que la mayoría de las veces es dejada de lado, el
+              <h4 class="card-title text-dark">Mi computadora hace mucho ruido, ¿qué podría ser?</h4>
+              <p class="card-text text-dark">Hay una causa que la mayoría de las veces es dejada de lado, el
                 mantenimiento preventivo, el cual
                 que debe realizarse para evitar incovenientes que, en muchos casos, llevan al daño total o parcial
                 de algún componente, incluso hasta pérdida de datos.</p>
@@ -255,28 +258,28 @@
           </div>
 
 
-          <div class="card border-white cartaPreg col-xs-10 col-md-10 col-lg-6 col-xl-4" style="width: 18rem;">
+          <div class="card cartaPreg col-xs-10 col-md-10 col-lg-6 col-xl-4" style="width: 18rem;">
             <div class="card-body">
-              <h4 class="card-title text-white">¿Qué ventajas tiene un enlace inalámbrico?</h4>
-              <p class="card-text text-white"> La principal ventaja es facilitar el intercambio de información a
+              <h4 class="card-title text-dark">¿Qué ventajas tiene un enlace inalámbrico?</h4>
+              <p class="card-text text-dark"> La principal ventaja es facilitar el intercambio de información a
                 distancia, como si todo
                 estuviera conectado en un mismo lugar.</p>
 
             </div>
           </div>
-          <div class="card border-white cartaPreg col-xs-10 col-md-10 col-lg-6 col-xl-4" style="width: 18rem;">
+          <div class="card cartaPreg col-xs-10 col-md-10 col-lg-6 col-xl-4" style="width: 18rem;">
             <div class="card-body">
-              <h4 class="card-title text-white"> ¿Estás buscando tener más control sobre tu hogar?</h4>
-              <p class="card-text text-white"> Todo en tu smartphone las 24 hs. a través de internet. Disfrutá de la
+              <h4 class="card-title text-dark"> ¿Estás buscando tener más control sobre tu hogar?</h4>
+              <p class="card-text text-dark"> Todo en tu smartphone las 24 hs. a través de internet. Disfrutá de la
                 tranquildad de tenerlo todo
                 bajo control.</p>
 
             </div>
           </div>
-          <div class="card border-white cartaPreg col-xs-10 col-md-10 col-lg-6 col-xl-4" style="width: 18rem;">
+          <div class="card cartaPreg col-xs-10 col-md-10 col-lg-6 col-xl-4" style="width: 18rem;">
             <div class="card-body">
-              <h4 class="card-title text-white">¿La red de mi empresa es segura?</h4>
-              <p class="card-text text-white">La seguridad dentro de la red de tu empresa es fundamental para que la
+              <h4 class="card-title text-dark">¿La red de mi empresa es segura?</h4>
+              <p class="card-text text-dark">La seguridad dentro de la red de tu empresa es fundamental para que la
                 información esté a salvo.
                 Una red bien diseñada permite el acceso a la información con menos demoras.</p>
 
@@ -435,8 +438,8 @@
     </div>
     </div>
  
-    <div class="footer-area-bottom">
-      <div class="container-fluid">
+    <!-- <div class="footer"> -->
+      <div class="container-fluid footer">
         <div class="row">
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="copyright text-center">
@@ -451,7 +454,7 @@
           </div>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
     <!-- </div> -->
   </div>
 
