--- a/leguin.html
+++ b/leguin.html
@@ -382,16 +382,16 @@
           tabindex="0"></iframe>
       </div>
       <div class="col-xl-6 col-lg-6 col-md-12 col-xs-12">
-        <form action="" class="formCont">
+        <form id="formulario" class="formCont">
           <h3 class="text-center text-white">Dejanos tu consulta</h3>
           <label class="text-white">Nombre</label>
-          <input type="text" class="form-control" placeholder="Ingrese Nombre">
+          <input name="nombre" type="text" class="form-control" placeholder="Ingrese Nombre" required minlength="2" maxlength="50">
           <label class="text-white">E-mail</label>
-          <input type="email" class="form-control" placeholder="E-mail">
+          <input name="email" type="email" class="form-control" placeholder="E-mail" required minlength="10" maxlength="70">
           <label class="text-white">Asunto</label>
-          <input type="text" class="form-control" placeholder="Asunto">
+          <input name="asunto" type="text" class="form-control" placeholder="Asunto" required  required minlength="3" maxlength="50">
           <label for="exampleFormControlTextarea1" class="text-white">Escriba su Consulta</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <textarea class="form-control" name="consulta" id="exampleFormControlTextarea1" rows="3" type="text" required maxlength="150"></textarea>
           <button type="submit" class="form-control btn btn-danger my-3">Enviar</button>
         </form>
 
@@ -474,6 +474,8 @@
     crossorigin="anonymous"></script>
     <script src="js/particles.js"></script>
     <script src="js/app.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="js/form.js"></script>
 </body>
 
 </html>
