--- a/leguin.html
+++ b/leguin.html
@@ -221,7 +221,7 @@
     <!---COMINEZA PREGUNTAS FRECUENTES-->
     <div class="container-fluid ">
       <div class=" text-center">
-        <h2 class="text-dark m-4  ">Preguntas frecuentes</h2>
+        <h2 class=" m-4 text-white ">Preguntas frecuentes</h2>
       </div>
       <div class="row">
         
